# MIV

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: Coordinates.hpp  DefaultState.cpp  DefaultState.hpp  GapBuffer.cpp  GapBuffer.hpp  InsertState.cpp  InsertState.hpp  ModeEnum.hpp  ModeStateMachine.cpp  ModeStateMachine.hpp  StateInterface.hpp  main.cpp
